lib_LTLIBRARIES=libferro.la

library_includedir=$(includedir)/ferro
library_include_HEADERS=AStream.h cstypes.h macroman.h MapInfoChunk.h	\
ScriptChunk.h TerminalChunk.h Wad.h Wadfile.h Unimap.h

libferro_la_SOURCES=AStream.cpp macroman.cpp MapInfoChunk.cpp		\
ScriptChunk.cpp TerminalChunk.cpp Wad.cpp Wadfile.cpp Unimap.cpp

INCLUDES=-I $(top_srcdir)
